[package]
name = "rustctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
kube = { version = "0.80.0", features = ["runtime", "derive"] }
schemars = "0.8.12"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
